# the-preview-crew

./: .gitignore  README.md  dump.rdb  main.py  pyproject.toml  requirements.txt  tmp.py  tmp.txt  ui.py
src/the_preview/: crew.py  main.py  tmp.ipynb  tmp.py
src/the_preview/config/: agents.yaml  tasks.yaml
src/the_preview/tools/: custom_tool.py  image_gen_tool.py  spotify_auth.py  spotify_preferences_tool.py  spotify_tool.py
