[project]
name = "the_preview"
version = "0.1.0"
description = "the_preview using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]>=0.157.0,<1.0.0",
]

[project.scripts]
the_preview = "the_preview.main:run"
run_crew = "the_preview.main:run"
train = "the_preview.main:train"
replay = "the_preview.main:replay"
test = "the_preview.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
